fix vip alignnment

--- a/www/styles/style.less
+++ b/www/styles/style.less
@@ -394,7 +394,7 @@ button.right-arrow {
 	margin: 10px;
 	overflow: hidden;
 	padding: 10px;
-	text-align: center;
+	text-align: top;
 	transition-duration: .5s;
 	transition-property: none;
 	transition-timing-function: cubic-bezier(.42, 0, .58, 1);
